adds cert authority container and bootstraps it

--- a/Dockerfile.server
+++ b/Dockerfile.server
@@ -1,8 +1,9 @@
 FROM eclipse-mosquitto 
 LABEL maintainer = "Arizbeth Rojas <arojas@iqt.org>"
-RUN apk add --update curl mosquitto && rm -rf /var/cache/apk/*
+
+RUN apk add --update curl mosquitto certbot && rm -rf /var/cache/apk/*
 COPY mosquitto.conf /etc/mosquitto/mosquitto.conf
 COPY start_mqtt.sh .
 EXPOSE 1883
-ENTRYPOINT ["./start_mqtt.sh"]
-# ENTRYPOINT ["tail", "-f", "/dev/null"]
+# ENTRYPOINT ["./start_mqtt.sh"]
+ENTRYPOINT ["tail", "-f", "/dev/null"]
