--- a/mosquitto.conf
+++ b/mosquitto.conf
@@ -9,14 +9,14 @@ allow_anonymous false
 password_file /etc/mosquitto/passwd
 
 # listener 8883
-# certfile /etc/letsencrypt/live/paho.mqtt.client/cert.pem
-# cafile /etc/letsencrypt/live/paho.mqtt.client/chain.pem
-# keyfile /etc/letsencrypt/live/paho.mqtt.client/privkey.pem
+# certfile /etc/letsencrypt/live/mqtt-server/cert.pem
+# cafile /etc/letsencrypt/live/mqtt-server/chain.pem
+# keyfile /etc/letsencrypt/live/mqtt-server/privkey.pem
 
 # listener 8083
 # protocol websockets
-# certfile /etc/letsencrypt/live/paho.mqtt.client/cert.pem
-# cafile /etc/letsencrypt/live/paho.mqtt.client/chain.pem
-# keyfile /etc/letsencrypt/live/paho.mqtt.client/privkey.pem
+# certfile /etc/letsencrypt/live/mqtt-server/cert.pem
+# cafile /etc/letsencrypt/live/mqtt-server/chain.pem
+# keyfile /etc/letsencrypt/live/mqtt-server/privkey.pem
 
 # renew_hook = systemctl restart mosquitto 
