--- a/Dockerfile.client
+++ b/Dockerfile.client
@@ -1,3 +1,10 @@
+FROM smallstep/step-cli as step
 FROM efrecon/mqtt-client:latest
 
-ENTRYPOINT ["tail", "-f", "/dev/null"]
+#copy step binary for bootstrapping ca
+COPY --from=step /usr/local/bin/step /usr/local/bin/
+
+
+COPY trust_ca.sh .
+
+ENTRYPOINT ["./trust_ca.sh","&&","tail", "-f", "/dev/null"]
