--- a/mosquitto.conf
+++ b/mosquitto.conf
@@ -8,15 +8,11 @@ listener 1883
 allow_anonymous false
 password_file /etc/mosquitto/passwd
 
-# listener 8883
-# certfile /etc/letsencrypt/live/mqtt-server/cert.pem
-# cafile /etc/letsencrypt/live/mqtt-server/chain.pem
-# keyfile /etc/letsencrypt/live/mqtt-server/privkey.pem
-
-# listener 8083
-# protocol websockets
-# certfile /etc/letsencrypt/live/mqtt-server/cert.pem
-# cafile /etc/letsencrypt/live/mqtt-server/chain.pem
-# keyfile /etc/letsencrypt/live/mqtt-server/privkey.pem
+listener 8883
+allow_anonymous false
+password_file /etc/mosquitto/passwd
+certfile /etc/mosquitto/certs/cert.pem
+cafile /etc/mosquitto/certs/chain.pem
+keyfile /etc/mosquitto/certs/privkey.pem
 
 # renew_hook = systemctl restart mosquitto 
