--- a/Dockerfile.server
+++ b/Dockerfile.server
@@ -10,5 +10,5 @@ COPY mosquitto.conf /etc/mosquitto/mosquitto.conf
 COPY trust_ca.sh .
 COPY start_mqtt.sh .
 EXPOSE 1883
-# ENTRYPOINT ["./start_mqtt.sh"]
-ENTRYPOINT ["tail", "-f", "/dev/null"]
+ENTRYPOINT ["./start_mqtt.sh"]
+# ENTRYPOINT ["tail", "-f", "/dev/null"]
