added `HEALTHCHECK` to CA's `Dockerfile` to prevent the case where the server or client comes up before the CA is serving up it's fingerprint causing a failure to properly bootstrap the CA's cert

--- a/Dockerfile.ca
+++ b/Dockerfile.ca
@@ -8,6 +8,8 @@ RUN mkdir /static && chown step:step /static && \
     chown -R step:step /run/nginx && \
     chmod +x /entrypoint.sh
 
+HEALTHCHECK --interval=15s --timeout=15s \
+ CMD curl --silent --fail http://localhost:8051/fingerprint || exit 1
 
 USER step
 COPY ./nginx.conf /etc/nginx/nginx.conf
