--- a/server/Dockerfile.server
+++ b/server/Dockerfile.server
@@ -10,5 +10,7 @@ COPY mosquitto.conf /etc/mosquitto/mosquitto.conf
 COPY trust_ca.sh .
 COPY start_mqtt.sh .
 EXPOSE 1883
+EXPOSE 8883
+
 ENTRYPOINT ["./start_mqtt.sh"]
 # ENTRYPOINT ["tail", "-f", "/dev/null"]
