--- a/server/Dockerfile.server
+++ b/server/Dockerfile.server
@@ -12,5 +12,9 @@ COPY start_mqtt.sh .
 EXPOSE 1883
 EXPOSE 8883
 
+
+HEALTHCHECK --interval=15s --timeout=15s \
+ CMD timeout 1 mosquitto_sub -h localhost -p 1883 -t '$SYS/#' -u $(cat /run/secrets/mqtt_user) -P $(cat /run/secrets/mqtt_pass) -E -i probe || exit 1
+
 ENTRYPOINT ["./start_mqtt.sh"]
 # ENTRYPOINT ["tail", "-f", "/dev/null"]
