--- a/server/mosquitto.conf
+++ b/server/mosquitto.conf
@@ -1,3 +1,4 @@
+pid_file /etc/mosquitto/pid
 per_listener_settings true
 
 log_type all
@@ -14,5 +15,3 @@ password_file /etc/mosquitto/passwd
 certfile /etc/mosquitto/certs/cert.pem
 cafile /etc/mosquitto/certs/chain.pem
 keyfile /etc/mosquitto/certs/privkey.pem
-
-# renew_hook = systemctl restart mosquitto 
